<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/reteUP"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:id="@+id/reteUP" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/reteDown" app:layout_constraintEnd_toEndOf="@+id/reteDown"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reteDown" android:text="@string/reteDOWN"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.785"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintVertical_bias="0.323"/>
    <TextView
            android:text="@string/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.55"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/text2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/MyCoin"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/MyCoin"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text1"
            android:text="@string/mycoin"/>
    <TextView
            android:text="@string/retecoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="9dp" android:id="@+id/ratetx" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text2"/>
</android.support.constraint.ConstraintLayout>